opam-version: "2.0"
maintainer: "Deepali Ande <deepaliande.1@gmail.com>"
authors: ["Deepali Ande <deepaliande.1@gmail.com>"]
homepage: "https://github.com/deepali2806/unified_interface"
doc: "https://github.com/deepali2806/unified_interface/blob/main/README.md"
synopsis: "Unified interface to call domainslib calls from eio without blocking "
license: "ISC"
dev-repo: "git+https://github.com/deepali2806/unified_interface.git"
bug-reports: "https://github.com/deepali2806/unified_interface/issues"
tags: []
depends: [
  "ocamlfind" {build}
  "dune" {build}
]
depopts: []
build: [
  "dune" "build" "-p" name
]

pin-depends: [
	[ "eio.0.6" "git+https://github.com/deepali2806/eio-1.git#suspend_effect_branch" ]
	[ "eio_luv.0.6" "git+https://github.com/deepali2806/eio-1.git#suspend_effect_branch" ]
	[ "eio_linux.0.6" "git+https://github.com/deepali2806/eio-1.git#suspend_effect_branch" ]
	[ "eio_main.0.6" "git+https://github.com/deepali2806/eio-1.git#suspend_effect_branch" ]
	[ "domainslib.0.5.0" "git+https://github.com/deepali2806/domainslib.git#suspendBranch" ]
	[ "lwt.5.6.1" "git+https://github.com/deepali2806/lwt.git#suspend_function" ]	

]
